[gd_scene load_steps=15 format=3 uid="uid://dmphjqymc5tmf"]

[ext_resource type="PackedScene" uid="uid://cagdrvllq4n4q" path="res://components/hurtbox_component.tscn" id="1_l34ok"]
[ext_resource type="PackedScene" uid="uid://bbx7m03mkqsce" path="res://components/health_component.tscn" id="1_mdpbk"]
[ext_resource type="Script" uid="uid://dnfhkqn2v0ubf" path="res://entities/upgrade_option/upgrade_option.gd" id="1_yuvji"]
[ext_resource type="Texture2D" uid="uid://cicfip5pnh5eb" path="res://assets/upgrade/upgrade_option.png" id="3_34j1a"]
[ext_resource type="PackedScene" uid="uid://dbgtkl52cuoxp" path="res://components/hit_flash_sprite_component.tscn" id="5_jncuo"]
[ext_resource type="Shader" uid="uid://dcohw70txvg72" path="res://resources/shader/hit_flash.gdshader" id="5_xoods"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yuvji"]
radius = 8.0

[sub_resource type="Animation" id="Animation_jncuo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_27yqu"]
resource_name = "despawn"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.5, 1.5), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_xoods"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -21)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_34j1a"]
resource_name = "spawn"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoods"]
_data = {
&"RESET": SubResource("Animation_jncuo"),
&"despawn": SubResource("Animation_27yqu"),
&"idle": SubResource("Animation_xoods"),
&"spawn": SubResource("Animation_34j1a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xoods"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27yqu"]
resource_local_to_scene = true
shader = ExtResource("5_xoods")
shader_parameter/percent = 0.0

[node name="UpgradeOption" type="Node2D" groups=["upgrade_option"]]
script = ExtResource("1_yuvji")

[node name="HealthComponent" parent="." instance=ExtResource("1_mdpbk")]
max_health = 10

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("1_l34ok")]
position = Vector2(0, -16)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_yuvji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xoods")
}
autoplay = "spawn"
next/spawn = &"idle"

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_xoods")

[node name="HitFlashSpriteComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_jncuo")]
material = SubResource("ShaderMaterial_27yqu")
position = Vector2(0, -16)
texture = ExtResource("3_34j1a")
health_component = NodePath("../HealthComponent")

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(192, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -75.0
offset_right = 96.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.172549, 0.309804, 1)
theme_override_constants/outline_size = 4
text = "Test title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Example description"
horizontal_alignment = 1
autowrap_mode = 2
